syntax = "proto2";

package com.algolia.instantsearch.telemetry;

// serial name 'com.algolia.instantsearch.telemetry.Schema'
message Schema {
  // WARNING: a default value decoded when value is missing
  repeated Component components = 700;
}

// serial name 'com.algolia.instantsearch.telemetry.Component'
message Component {
  required ComponentType type = 600;
  // WARNING: a default value decoded when value is missing
  repeated ComponentParam parameters = 601;
  required bool isConnector = 602;
  required bool isDeclarative = 603;
}

// serial name 'ComponentType'
enum ComponentType {
  Unknown = 0;
  HitsSearcher = 1;
  FacetSearcher = 2;
  MultiSearcher = 3;
  AnswersSearcher = 4;
  FilterState = 5;
  DynamicFacets = 6;
  HierarchicalFacets = 7;
  FacetList = 8;
  FilterClear = 9;
  FacetFilterList = 10;
  NumericFilterList = 11;
  TagFilterList = 12;
  FilterToggle = 13;
  NumberFilter = 14;
  NumberRangeFilter = 15;
  CurrentFilters = 16;
  Hits = 17;
  Loading = 18;
  Stats = 19;
  SearchBox = 20;
  QueryRuleCustomData = 21;
  RelevantSort = 22;
  SortBy = 23;
  RelatedItems = 24;
  FilterMap = 25;
  MultiHits = 26;
  FilterList = 27;
}

// serial name 'ComponentParam'
enum ComponentParam {
  Undefined = 0;
  ApiKey = 1;
  AppID = 2;
  Attribute = 3;
  Bounds = 4;
  ClearMode = 5;
  Client = 6;
  Facets = 7;
  Filter = 8;
  FilterGroupForAttribute = 9;
  FilterGroupIDs = 10;
  GroupName = 11;
  HierarchicalAttributes = 12;
  IndexName = 13;
  InfiniteScrolling = 14;
  Item = 15;
  Items = 16;
  Operator = 17;
  OrderedFacets = 18;
  Priority = 19;
  Range = 20;
  SearchTriggeringMode = 21;
  Searcher = 22;
  IsSelected = 23;
  SelectionMode = 24;
  SelectionModeForAttribute = 25;
  Selections = 26;
  Separator = 27;
  ShowItemsOnEmptyQuery = 28;
  IsDisjunctiveFacetingEnabled = 29;
  IsLoading = 30;
  Mode = 31;
  Number = 32;
  PersistentSelection = 33;
  SearchMode = 34;
  Strategy = 35;
  GroupIDs = 36;
  RequestOptions = 37;
  FacetsQuery = 38;
  Filters = 39;
  NumericOperator = 40;
  Selected = 41;
  FilterStateParameter = 42;
  HitsSearcherParameter = 43;
  FacetSearcherParameter = 44;
}
